# commonpub

./: .env.example  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  lighthouserc.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.config.mjs  tsconfig.json  turbo.json  vitest.workspace.ts
tools/create-commonpub/: .gitignore  Cargo.toml  README.md  build.rs
tools/create-commonpub/reference-app/: .env.example  error.vue  nuxt.config.ts  package.json
tools/create-commonpub/reference-app/components/: CommentSection.vue  ContentStarterForm.vue  ContentTypeBadge.vue  EditorPropertiesPanel.vue  EngagementBar.vue  FederatedContentCard.vue  ImageUpload.vue  PublishErrorsModal.vue  TimelineItem.vue
tools/create-commonpub/reference-app/components/blocks/: BlockBuildStepView.vue  BlockCalloutView.vue  BlockEmbedView.vue  BlockMathView.vue
tools/create-commonpub/reference-app/components/editors/: ArticleEditor.vue  BlogEditor.vue  EditorBlocks.vue  ProjectEditor.vue
tools/create-commonpub/reference-app/components/views/: ArticleView.vue  ExplainerView.vue  ProjectView.vue
tools/create-commonpub/reference-app/layouts/: admin.vue
tools/create-commonpub/reference-app/pages/: explore.vue  search.vue
tools/create-commonpub/reference-app/pages/admin/: audit.vue  content.vue  federation.vue  reports.vue  users.vue
tools/create-commonpub/src/: lib.rs  main.rs  prompts.rs  scaffold.rs  template.rs
tools/create-commonpub/tests/: cli.rs
(+2985 files in other folders)
