[package]
name = "create-commonpub"
version = "0.2.0"
edition = "2021"
description = "CLI tool for scaffolding new CommonPub instances"
license = "MIT"

[lib]
name = "create_commonpub"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
include_dir = "0.7"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
